# fractal-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  run.sh
docs/: design_decisions.md  implementation_progress.md  vulkan_concepts.md
shaders/: fractal_display.frag  fullscreen.vert  mandelbrot.comp  test.comp
src/: ComputePipeline.cpp  ComputePipeline.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GuiManager.cpp  GuiManager.h  MemoryManager.cpp  MemoryManager.h  ShaderManager.cpp  ShaderManager.h  SwapchainManager.cpp  SwapchainManager.h  TextureManager.cpp  TextureManager.h  VulkanApplication.cpp  VulkanApplication.h  VulkanSetup.cpp  VulkanSetup.h  WindowManager.cpp  WindowManager.h  main.cpp
